# piranhas

./: .gitignore  README.md  package.json  schnorr_input_gen.js
attest/: Nargo.toml  Prover.toml
attest/src/: attest.nr  main.nr
circom/: attest.circom  benchmark.sh  input.json  merkleTree.circom  package.json
circuit_1/: Prover.toml
circuit_1/src/: main.nr
noir/: run_benchmarks.sh
noir/1-attest-Pi-zkRA/: Prover.toml
noir/1-attest-Pi-zkRA/src/: main.nr
noir/2-recurse-(R1)/src/: main.nr
noir/2-recurse-R1/: Prover.toml
noir/3-aggregate-(R2)/src/: main.nr
noir/3-aggregate-R2/src/: attest.nr
noir/4-optimized-(R2+R1)/: Prover.toml
noir/5-optimized-(2xR2+R1)/: Prover.toml
noir/5-optimized-(2xR2+R1)/src/: main.nr
noir/attest/src/: attest.nr
noir/recurse/: Prover.toml
noir/recurse-hardened/: Prover.toml
noir/recurse-hardened/src/: main.nr
noir/recurse/src/: main.nr
plonky2/plonky2-examples/: Cargo.toml
plonky2/plonky2-examples/examples/: benchmarks.sh  more_piranhas.rs  nonnative.rs  piranha.rs  piranhas.rs  schnorr_sig.rs
plonky2/plonky2_libraries/plonky2-ecdsa/: Cargo.toml
plonky2/plonky2_libraries/plonky2-ecgfp5/: Cargo.toml
plonky2/plonky2_libraries/plonky2-ecgfp5/examples/: schnorr_sig.rs
plonky2/plonky2_libraries/plonky2-u32/: Cargo.toml
recurse/: Nargo.toml  Prover.toml
recurse-2/: Prover.toml
recurse-2-parallel/: Prover.toml
recurse-2/src/: main.nr
recurse-3/: Prover.toml
recurse-3-parallel/src/: main.nr
recurse-3/src/: attest.nr  main.nr
recurse/src/: main.nr
(+16 files in other folders)
